# raven

backend/: Pipfile  db.sqlite3  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/fixture/: full_user_data.json  profiles.json
backend/src/: routers.py
backend/src/profiles/: admin.py  models.py
backend/src/profiles/migrations/: 0001_initial.py
backend/src/restapi/: models.py  serializers.py  urls.py
backend/src/restapi/migrations/: 0001_initial.py
docs/structure/rest/: rest_test_struct.txt
