[tool.poetry]
name = "A.T.S Backend"
version = "0.1.0"
description = ""
authors = ["LisS666-netizen <mrkid9078@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.0"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.4.0"
Pillow = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
